Enable the Theme.AppCompat.Leanback

--- a/vlaamsetv/src/main/res/values/themes.xml
+++ b/vlaamsetv/src/main/res/values/themes.xml
@@ -9,6 +9,5 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
     </style>
 
-    <style name="Theme.TV.VlaamseTV" parent="Theme.Leanback">
-    </style>
+    <style name="Theme.TV.VlaamseTV" parent="Theme.AppCompat.Leanback" />
 </resources>
