--- a/vlaamsetv/src/main/res/navigation/tv_graph.xml
+++ b/vlaamsetv/src/main/res/navigation/tv_graph.xml
@@ -13,6 +13,9 @@
         <action
             android:id="@+id/action_mainFragment_to_authentication_flow_tv"
             app:destination="@id/authenticationActivity" />
+        <action
+            android:id="@+id/action_mainFragment_to_playbackActivity"
+            app:destination="@id/playbackActivity" />
     </fragment>
 
     <activity
@@ -23,5 +26,9 @@
             android:name="config"
             app:argType="be.tapped.vlaamsetv.auth.AuthenticationNavigationConfiguration[]" />
     </activity>
+    <activity
+        android:id="@+id/playbackActivity"
+        android:name="be.tapped.vlaamsetv.playback.PlaybackActivity"
+        android:label="PlaybackActivity" />
 
 </navigation>
