--- a/vlaamsetv/src/main/res/navigation/playback_flow_tv.xml
+++ b/vlaamsetv/src/main/res/navigation/playback_flow_tv.xml
@@ -2,10 +2,10 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/playback_flow_tv"
-    app:startDestination="@id/playbackFragment">
+    app:startDestination="@id/videoPlayerTVFragment">
 
     <fragment
-        android:id="@+id/playbackFragment"
-        android:name="be.tapped.vlaamsetv.playback.PlaybackFragment"
-        android:label="PlaybackFragment" />
+        android:id="@+id/videoPlayerTVFragment"
+        android:name="be.tapped.vlaamsetv.VideoPlayerTVFragment"
+        android:label="VideoPlayerTVFragment" />
 </navigation>
