--- a/vlaamsetv/src/main/res/values/strings_vrtnu_browse.xml
+++ b/vlaamsetv/src/main/res/values/strings_vrtnu_browse.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="vrt_nu_name">VRT NU</string>
+    <string name="vrt_nu_live_tv">Live TV</string>
+    <string name="vrt_nu_all_programs">All Programs</string>
 </resources>
