--- a/vlaamsetv/src/main/res/values/strings_tv_auth_flow.xml
+++ b/vlaamsetv/src/main/res/values/strings_tv_auth_flow.xml
@@ -4,11 +4,11 @@
 
     <string name="auth_flow_vrtnu_description">De inlogegevens worden enkel lokaal opgeslagen.</string>
     <string name="auth_flow_vtmgo_description">Met je account heb je gratis toegang tot alles van VTM GO: de beste Vlaamse programma\'s en exclusieve internationale series. Veel kijkplezier!</string>
-    <string name="auth_flow_vier_description">De inlogegevens worden enkel lokaal opgeslagen.</string>
+    <string name="auth_flow_goplay_description">De inlogegevens worden enkel lokaal opgeslagen.</string>
 
     <string name="auth_flow_vrtnu_step_breadcrumb">VRT NU</string>
     <string name="auth_flow_vtmgo_step_breadcrumb">VTM GO</string>
-    <string name="auth_flow_vier_step_breadcrumb">VIER</string>
+    <string name="auth_flow_goplay_step_breadcrumb">GoPlay</string>
 
     <string name="auth_flow_next">Volgende</string>
     <string name="auth_flow_finish">Klaar</string>
