--- a/vlaamsetv/src/main/res/navigation/browse_flow_tv.xml
+++ b/vlaamsetv/src/main/res/navigation/browse_flow_tv.xml
@@ -15,5 +15,9 @@
     <activity
         android:id="@+id/detailActivity"
         android:name="be.tapped.vlaamsetv.detail.DetailActivity"
-        android:label="DetailActivity" />
+        android:label="DetailActivity">
+        <argument
+            android:name="input"
+            app:argType="be.tapped.vlaamsetv.detail.DetailActivity$InputArgument" />
+    </activity>
 </navigation>
